# tree-sitter-textwire

./: .dockerignore  .prettierrc  AGENTS.md  CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE  Makefile  Package.swift  README.md  binding.gyp  compose.yml  docker-compose.yml  example.tw  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  textwire.tw  tree-sitter.json
bindings/c/: tree-sitter-textwire.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_textwire/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTextwire/: textwire.h
bindings/swift/TreeSitterTextwireTests/: TreeSitterTextwireTests.swift
queries/: highlights.scm  injections.scm
queries/textwire/: folds.scm  highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: comments.txt  directives.txt  expressions.txt  html.txt  interpolation.txt  literals.txt  statements.txt  text.txt
test/corpus/directives/: break.txt  component.txt  control_flow.txt  dump.txt  each.txt  for.txt  if.txt  insert.txt  reserve.txt  simple.txt  use.txt
test/corpus/literals/: strings.txt
test/corpus/text/: html_with_embedded.txt
