[package]
name = "tree-sitter-textwire"
description = "Dynamic templating and scripting language for Go. Ideal for embedding dynamic content with Go applications"
version = "0.1.0"
authors = ["Serhii Cho <serhiicho@protonmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "textwire"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/textwire/textwire"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.7"
